[project]
name = "japanese-tutor-rag-agent"
version = "0.1.0"
description = "Japanese language tutor agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=4.0.2",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "prompt-toolkit>=3.0.52", # This improves cli experience for Japanese characters
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]