[project]
name = "language-tutor-agent"
version = "0.1.0"
description = "A language tutor agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=4.0.2",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "prompt-toolkit>=3.0.52", # This improves cli experience for Japanese characters
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
